# lygia-rs-scratch

./: Cargo.toml  README.md  build.rs
lygia/: .gitignore  build.rs  cargo.toml
lygia/color/: hueShiftRYB.wesl  mixOklab.wesl
lygia/generative/: srandom.wesl
lygia/lighting/: fresnel.wesl
lygia/lighting/raymarch/: cast.wesl  normal.wesl
lygia/lighting/specular/: cookTorrance.wesl
lygia/math/: mmax.wesl  mmin.wesl  unpack.wesl
lygia/src/: lib.rs
src/: main.rs
src/shaders/: main.wesl
